- fixed UI overflowing - more refactoring of code - using recursive timeout now instead of interval - removed useeffectevent

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,9 +25,14 @@
 body {
 	background: var(--background);
 	color: var(--foreground);
-	min-width: 100vw;
 	font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
 	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* overflow-x: hidden; */
+	margin: 0;
+	padding: 0;
 }
 
 @keyframes autoModeAnim {
